# OPPPO

./: .gitignore  CMakeLists.txt  Makefile  figure.cpp  figure.h  input  lab  lab1.cpp  lab1.h  labTST.cpp  main_test.cpp  my_list.cpp  my_list.h  output  test.cpp
Cpp/src/: figure.cpp  figure.h  input  lib.cpp  lib.h  output
Fsharp/Lab/: Lab.fsproj  Program.fs  input
src/: CMakeLists.txt  lab1.cpp
tests/: CMakeLists.txt  main_test.cpp
